--- a/src/sass/Utilities/_variables.scss
+++ b/src/sass/Utilities/_variables.scss
@@ -34,6 +34,6 @@ $font-sizes: (
 
 $breakpoints: (
         small: '(max-width: 500px)',
-        medium: '(max-width: 767px)',
-        large: '(min-width: 768px)',
+        medium: '(max-width: 1024px)',
+        large: '(min-width: 1025px)',
 );
